# serde-eth

./: Cargo.toml  LICENSE  README.md
.circleci/: config.yml
.github/: CODEOWNERS  settings.yml
src/: custom_de.rs  custom_ser.rs  de.rs  error.rs  eth.rs  lib.rs  ser.rs  serde_tests.rs
