[package]
name = "serde-eth"
version = "0.1.0"
authors = ["Oasis Labs <info@oasislabs.com>"]
license = "MIT/Apache-2.0"
description = "Serde support for Ethereum ABI"
repository = "https://github.com/oasislabs/serde-eth"
keywords = ["serde", "ethabi", "ethereum"]
categories = ["encoding"]
edition = "2018"

[dependencies]
serde = "1.0"

[dev-dependencies]
serde_derive = "1.0"
