[package]
name = "serde-eth"
version = "0.1.0"
authors = ["Oasis Labs <info@oasislabs.com>"]
license = "MIT/Apache-2.0"
description = "Serde support for Ethereum ABI"
repository = "https://github.com/oasislabs/serde-eth"
keywords = ["serde", "ethabi", "ethereum"]
categories = ["encoding"]
edition = "2018"

[dependencies]
serde = {version = "1.0", features = ["serde_derive"]}
ethabi = "7.0.0"
hex = "0.3.2"

[dev-dependencies]
serde_derive = "1.0"
oasis-std = "0.1.0"